// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader renders 1`] = `
<div class="page-header-container">
  <div class="avatar-container" id="unit_tests_namespace_ENTITY_SUMMARY1">
    <a href="/people/0" style="" title="Joe Bloggs0" class="avatar avatar-size-smallest">
      <div class="avatar-placeholder"></div>
    </a>
  </div>
  <div class="header-info">
    <a class="entity-link-container" href="/people/0" id="unit_tests_namespace_ENTITY_SUMMARY2">Joe Bloggs0</a>
    <span class="secondary-info" data-tooltip=""></span>
  </div>
</div>
`;

exports[`PageHeader should render with custom verbiage 1`] = `
<div class="page-header-container">
  <div class="avatar-container" id="unit_tests_namespace_ENTITY_SUMMARY3">
    <a href="/people/0" style="" title="Joe Bloggs0" class="avatar avatar-size-smallest">
      <div class="avatar-placeholder"></div>
    </a>
  </div>
  <div class="header-info">
    <div class="created-summary">x-on-x</div>
    <span class="secondary-info" data-tooltip=""></span>
  </div>
</div>
`;
